syntax = "proto3";
package messages;

option go_package = "github.com/samirgadkari/sidecar/protos/v1/messages";

message Header {
	string srcServType = 1;
	string dstServType = 2;
	uint64 servId = 3;
	uint32 msgId = 4;
}

enum Status {
	OK = 0;
	ERR_SENDING_MSG = 1;
	ERR_RECEIVING_MSG = 2;
	ERR_SUBSCRIBING = 3;
	ERR_PUBLISHING = 4;
	ERR_LOGGING = 5;
}

message ResponseHeader {
	uint32 status = 1;
}

message Empty {}
